cmake_minimum_required(VERSION 2.8.12)
project(fey)

if (UNIX OR APPLE)
  set(CMAKE_CXX_FLAGS "-O3 -g -std=c++11 ${CMAKE_CXX_FLAGS}")
endif()

include_directories(deps/glew/inc)
include_directories(deps/glfw/include)
include_directories(deps/glm)
include_directories(deps/soil/inc)
include_directories(deps/bullet/src)
add_subdirectory(deps)

include_directories(inc)
include_directories(inc/controllers)

file(GLOB_RECURSE SOURCES "src/*.cpp")
add_executable(fey ${SOURCES})

set(LINKED_LIBRARIES glew soil glfw LinearMath BulletDynamics BulletCollision ${GLFW_LIBRARIES})
set(DATA_DESTINATION .)
set(COPY_DATA feyData)
if(APPLE)
  find_library(OPENGL_LOCATION OpenGL)
  set(LINKED_LIBRARIES ${LINKED_LIBRARIES} ${OPENGL_LOCATION})
elseif(UNIX)
  set(LINKED_LIBRARIES ${LINKED_LIBRARIES} GL)
elseif(WIN32)
  set(LINKED_LIBRARIES ${LINKED_LIBRARIES} opengl32)
  set(DATA_DESTINATION Debug)
endif()
target_link_libraries(fey ${LINKED_LIBRARIES})

file(COPY ${COPY_DATA} DESTINATION ${DATA_DESTINATION})
install(TARGETS fey DESTINATION games)
install(DIRECTORY feyData DESTINATION games DIRECTORY_PERMISSIONS WORLD_READ WORLD_WRITE WORLD_EXECUTE)
