cmake_minimum_required(VERSION 2.8.12)
project(fey)

include_directories(deps/glad)
include_directories(deps/glfw/include)
include_directories(deps/glm)
include_directories(deps/soil/inc)
add_subdirectory(deps)

include_directories(inc)
include_directories(inc/controllers)
include_directories(inc/resources)
include_directories(inc/physics)
include_directories(inc/physics/colliders)

file(GLOB_RECURSE SOURCES "src/*.cpp")
add_executable(fey ${SOURCES})

set(LINKED_LIBRARIES glfw glad soil ${GLFW_LIBRARIES})
set(DATA_DESTINATION .)
set(COPY_DATA feyData)

if(WIN32)
  set(LINKED_LIBRARIES ${LINKED_LIBRARIES} opengl32)
  set(DATA_DESTINATION Debug)
else()
  set(GCC_COMPILE_FLAGS "-O3 -g -std=c++11")
  add_definitions(${GCC_COMPILE_FLAGS})
  if(APPLE)
    find_library(OPENGL_LOCATION OpenGL)
    set(LINKED_LIBRARIES ${LINKED_LIBRARIES} ${OPENGL_LOCATION})
  elseif(UNIX)
    set(LINKED_LIBRARIES ${LINKED_LIBRARIES} GL)
  endif()
endif()
target_link_libraries(fey ${LINKED_LIBRARIES})

file(COPY ${COPY_DATA} DESTINATION ${DATA_DESTINATION})
install(TARGETS fey DESTINATION games)
install(DIRECTORY feyData DESTINATION games DIRECTORY_PERMISSIONS WORLD_READ WORLD_WRITE WORLD_EXECUTE)
